# Dais-Shell

./: README.md  pyproject.toml
.github/workflows/: publish.yaml  publish.yml
examples/: helloworld.py  temp.py
src/dais_shell/: __init__.py  constants.py  env_builder.py  iostream_reader.py
src/dais_shell/runtimes/: BaseShellRuntime.py  BashRuntime.py  PowershellRuntime.py  __init__.py
src/dais_shell/types/: __init__.py  command_step.py  exceptions.py
src/dais_shell/utils/: __init__.py  env_expander.py
tests/: test_env_builder.py  test_helloworld.py  test_powershell_runtime.py  test_shell_runtime.py
