[project]
name = "dais-shell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "BHznJNs", email = "441768875@qq.com" }
]
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
