[project]
name = "dais-shell"
version = "0.1.8"
description = "The shell tool for Dais."
readme = "README.md"
authors = [{ name = "BHznJNs", email = "441768875@qq.com" }]
requires-python = ">=3.11"
dependencies = ["psutil>=7.2.2"]

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["uv_build>=0.9.28,<0.11.0"]
build-backend = "uv_build"
